# Tactility-Zero

./: README.md  sdkconfig.board.esp32s3-zero
App/Source/: Boards.h  Main.cpp
Boards/ESP32S3-ZERO/: CMakeLists.txt  ESP32s3 Zero Config.txt
Boards/ESP32S3-ZERO/Source/: ESP32S3Zero.cpp  ESP32S3Zero.h  InitBoot.cpp
Boards/ESP32S3-ZERO/Source/hal/: ESP32S3ZeroConstants.h  ESP32S3ZeroDisplay.cpp  ESP32S3ZeroKeyboard.cpp  ESP32S3ZeroKeyboard.h  ESP32S3ZeroSdCard.cpp  ESP32S3ZeroSdCard.h
Buildscripts/: board.cmake
Drivers/PCA9555/example/: main.c
Drivers/PCA9555/include/: PCA9555.h
Drivers/PCA9555/src/: PCA9555.c
Tactility/Include/Tactility/hal/sdcard/: SpiSdCardDevice.h
Tactility/Source/: Tactility.cpp
Tactility/Source/hal/i2c/: I2c.cpp
TactilityCore/Source/: LogSimulator.cpp
